--- a/geomelody/geomelody/SongCell.xib
+++ b/geomelody/geomelody/SongCell.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12C60</string>
-		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.34</string>
-		<string key="IBDocument.HIToolboxVersion">625.00</string>
+		<int key="IBDocument.SystemTarget">1536</int>
+		<string key="IBDocument.SystemVersion">12E55</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2843</string>
+		<string key="IBDocument.AppKitVersion">1187.39</string>
+		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">2083</string>
+			<string key="NS.object.0">1929</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -43,9 +43,10 @@
 							<object class="IBUIImageView" id="580246965">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{320, 159}</string>
+								<string key="NSFrameSize">{320, 160}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSNextKeyView" ref="128807489"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="518002529"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -57,9 +58,10 @@
 							<object class="IBUILabel" id="755313303">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{258, 107}, {39, 19}}</string>
+								<string key="NSFrame">{{258, 108}, {39, 19}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSNextKeyView" ref="737727301"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="567944333"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -88,9 +90,10 @@
 							<object class="IBUIImageView" id="128807489">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{299, 111}, {12, 12}}</string>
+								<string key="NSFrame">{{299, 112}, {12, 12}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSNextKeyView" ref="518002529"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="737727301"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -102,9 +105,10 @@
 							<object class="IBUILabel" id="737727301">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{6, 138}, {294, 21}}</string>
+								<string key="NSFrame">{{6, 138}, {244, 21}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSNextKeyView" ref="567944333"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="1067743792"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -129,8 +133,9 @@
 							<object class="IBUILabel" id="518002529">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{6, 123}, {201, 21}}</string>
+								<string key="NSFrame">{{6, 122}, {244, 21}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="755313303"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -158,7 +163,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{258, 123}, {39, 20}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSNextKeyView" ref="1067743792"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="128807489"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -177,8 +183,9 @@
 							<object class="IBUIImageView" id="631132510">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{299, 123}, {12, 16}}</string>
+								<string key="NSFrame">{{299, 128}, {12, 12}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="928199358"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -193,6 +200,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{258, 138}, {39, 21}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="631132510"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -212,8 +220,10 @@
 							<object class="IBUIImageView" id="928199358">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{299, 147}, {12, 8}}</string>
+								<string key="NSFrame">{{299, 143}, {12, 12}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -225,6 +235,7 @@
 						</array>
 						<string key="NSFrameSize">{320, 159}</string>
 						<reference key="NSSuperview" ref="1040207467"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="580246965"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -240,6 +251,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 160}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="735591696"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -328,10 +340,10 @@
 							<reference ref="518002529"/>
 							<reference ref="631132510"/>
 							<reference ref="567944333"/>
-							<reference ref="928199358"/>
 							<reference ref="1067743792"/>
 							<reference ref="755313303"/>
 							<reference ref="128807489"/>
+							<reference ref="928199358"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -405,7 +417,52 @@
 			<nil key="sourceID"/>
 			<int key="maxID">159</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">SongCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="likes">UILabel</string>
+						<string key="plays">UILabel</string>
+						<string key="shares">UILabel</string>
+						<string key="songImage">UIImageView</string>
+						<string key="songInterpreter">UILabel</string>
+						<string key="songTitle">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="likes">
+							<string key="name">likes</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="plays">
+							<string key="name">plays</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shares">
+							<string key="name">shares</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songImage">
+							<string key="name">songImage</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songInterpreter">
+							<string key="name">songInterpreter</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songTitle">
+							<string key="name">songTitle</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SongCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -414,8 +471,8 @@
 			<string key="heart32.png">{32, 32}</string>
 			<string key="play32.png">{32, 32}</string>
 			<string key="retweet32.png">{32, 32}</string>
-			<string key="songcell_background.png">{320, 100}</string>
+			<string key="songcell_background.png">{320, 160}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">2083</string>
+		<string key="IBCocoaTouchPluginVersion">1929</string>
 	</data>
 </archive>
