--- a/geomelody/geomelody/en.lproj/PlayerViewController.xib
+++ b/geomelody/geomelody/en.lproj/PlayerViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">12E55</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2843</string>
-		<string key="IBDocument.AppKitVersion">1187.39</string>
-		<string key="IBDocument.HIToolboxVersion">626.00</string>
+		<int key="IBDocument.SystemTarget">1552</int>
+		<string key="IBDocument.SystemVersion">12C60</string>
+		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
+		<string key="IBDocument.AppKitVersion">1187.34</string>
+		<string key="IBDocument.HIToolboxVersion">625.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1929</string>
+			<string key="NS.object.0">2083</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -41,9 +41,8 @@
 					<object class="IBUIImageView" id="731627572">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{320, 273}</string>
+						<string key="NSFrameSize">{320, 300}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="83102700"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -52,10 +51,9 @@
 					<object class="IBUILabel" id="83102700">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{16, 36}, {298, 21}}</string>
+						<string key="NSFrame">{{16, 6}, {213, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1063613071"/>
+						<reference key="NSNextKeyView" ref="727923543"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -83,10 +81,9 @@
 					<object class="IBUILabel" id="727923543">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{16, 56}, {151, 21}}</string>
+						<string key="NSFrame">{{16, 26}, {213, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="584665343"/>
+						<reference key="NSNextKeyView" ref="109698914"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -117,7 +114,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{128, 68}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="542955711"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -151,10 +147,9 @@
 							<object class="IBUIButton" id="575022889">
 								<reference key="NSNextResponder" ref="1063613071"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{262, 141}, {64, 64}}</string>
+								<string key="NSFrame">{{262, 174}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="727923543"/>
+								<reference key="NSNextKeyView" ref="584665343"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<float key="IBUIAlpha">0.89999997615814209</float>
@@ -178,9 +173,8 @@
 							<object class="IBUIButton" id="542955711">
 								<reference key="NSNextResponder" ref="1063613071"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{-6, 141}, {64, 64}}</string>
+								<string key="NSFrame">{{-6, 174}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="575022889"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -203,9 +197,8 @@
 								<reference key="IBUIFont" ref="495722117"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 70}, {320, 200}}</string>
+						<string key="NSFrame">{{0, 55}, {320, 200}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="784089984"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -218,10 +211,8 @@
 					<object class="IBUITextView" id="633299990">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{113, 281}, {201, 100}}</string>
+						<string key="NSFrame">{{113, 306}, {201, 100}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="109698914"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -252,9 +243,8 @@
 					<object class="IBUIImageView" id="584665343">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{5, 281}, {100, 100}}</string>
+						<string key="NSFrame">{{5, 306}, {100, 100}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="633299990"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -263,9 +253,9 @@
 					<object class="IBUIButton" id="109698914">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{5, 409}, {309, 44}}</string>
+						<string key="NSFrame">{{255, 5}, {58, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="1063613071"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -288,7 +278,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="731627572"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -433,10 +422,10 @@
 							<reference ref="633299990"/>
 							<reference ref="731627572"/>
 							<reference ref="584665343"/>
-							<reference ref="1063613071"/>
 							<reference ref="83102700"/>
 							<reference ref="727923543"/>
 							<reference ref="109698914"/>
+							<reference ref="1063613071"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -466,8 +455,8 @@
 						<reference key="object" ref="1063613071"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="784089984"/>
-							<reference ref="542955711"/>
 							<reference ref="575022889"/>
+							<reference ref="542955711"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -505,7 +494,6 @@
 						<int key="objectID">53</int>
 						<reference key="object" ref="109698914"/>
 						<reference key="parent" ref="191373211"/>
-						<string key="objectName">Buton - Post</string>
 					</object>
 				</array>
 			</object>
@@ -534,142 +522,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">56</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">NSTimer</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSTimer.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PlayerViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="playNextSong:">id</string>
-						<string key="playPreviousSong:">id</string>
-						<string key="togglePlayingState:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="playNextSong:">
-							<string key="name">playNextSong:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="playPreviousSong:">
-							<string key="name">playPreviousSong:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="togglePlayingState:">
-							<string key="name">togglePlayingState:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="activityTimer">NSTimer</string>
-						<string key="artwork_picture">UIImageView</string>
-						<string key="lastActivityDate">NSDate</string>
-						<string key="likes">UILabel</string>
-						<string key="nextButton">UIButton</string>
-						<string key="pauseStart">NSDate</string>
-						<string key="playPauseButton">UIButton</string>
-						<string key="post_button">UIButton</string>
-						<string key="previousButton">UIButton</string>
-						<string key="previousFireDate">NSDate</string>
-						<string key="shares">UILabel</string>
-						<string key="songInterpreter">UILabel</string>
-						<string key="songProgressControl">UICircularSlider</string>
-						<string key="songProgressTimer">NSTimer</string>
-						<string key="songTitle">UILabel</string>
-						<string key="user_comment">UITextView</string>
-						<string key="user_picture">UIImageView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="activityTimer">
-							<string key="name">activityTimer</string>
-							<string key="candidateClassName">NSTimer</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="artwork_picture">
-							<string key="name">artwork_picture</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lastActivityDate">
-							<string key="name">lastActivityDate</string>
-							<string key="candidateClassName">NSDate</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="likes">
-							<string key="name">likes</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nextButton">
-							<string key="name">nextButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="pauseStart">
-							<string key="name">pauseStart</string>
-							<string key="candidateClassName">NSDate</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="playPauseButton">
-							<string key="name">playPauseButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="post_button">
-							<string key="name">post_button</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="previousButton">
-							<string key="name">previousButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="previousFireDate">
-							<string key="name">previousFireDate</string>
-							<string key="candidateClassName">NSDate</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shares">
-							<string key="name">shares</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="songInterpreter">
-							<string key="name">songInterpreter</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="songProgressControl">
-							<string key="name">songProgressControl</string>
-							<string key="candidateClassName">UICircularSlider</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="songProgressTimer">
-							<string key="name">songProgressTimer</string>
-							<string key="candidateClassName">NSTimer</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="songTitle">
-							<string key="name">songTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="user_comment">
-							<string key="name">user_comment</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="user_picture">
-							<string key="name">user_picture</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PlayerViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UICircularSlider</string>
-					<string key="superclassName">UIControl</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UICircularSlider.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -679,6 +532,6 @@
 			<string key="arrow-right64.png">{64, 64}</string>
 			<string key="pause64.png">{64, 64}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1929</string>
+		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
